--- a/.github/workflows/incident_management.yml
+++ b/.github/workflows/incident_management.yml
@@ -13,15 +13,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install node dependencies
-        run: npm install
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./scripts/requirements.txt
       - name: Sync issues
         run: python ./scripts/runner.py
-      - name: Setup git config
+      - name: Setup environment
+        env:
+          ACCESS_PAT: ${{ secrets.ACCESS_PAT }}
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
