--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -20,7 +20,7 @@ jobs:
           git config user.email "<>"
       - name: Commit and push changes
         run: |
-          git checkout gh-pages
+          git checkout -b gh-pages
           git add -A
           git commit -m "Build pages"
-          git push origin gh-pages
+          git push origin gh-pages --force
