Change git flow

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -22,8 +22,7 @@ jobs:
           git config user.email "<>"
       - name: Commit and push changes
         run: |
-          git checkout gh-pages
-          git pull origin gh-pages
+          git checkout -b gh-pages
           git add -A
           git commit -m "Build pages"
           git push origin gh-pages --force
