--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,8 +1,12 @@
 name: Build and Deploy
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+  workflow_run:
+    workflows: [Incident Management]
+    types:
+      - completed
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
