--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -3,6 +3,7 @@ on:
   # push:
   #   branches:
   #     - main
+  workflow_dispatch:
   workflow_run:
     workflows: [Incident Management]
     types:
