--- a/.github/workflows/incident_management.yml
+++ b/.github/workflows/incident_management.yml
@@ -1,18 +1,24 @@
 name: Incident Management
 on:
   issues:
-    types: [opened, edited, closed, reopened, labeled, unlabeled]
+    types: [opened, edited, closed, reopened]
   issue_comment:
     types: [created, deleted, edited]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   sync-issues-to-incidents:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "event name is:" ${{ github.event_name }}
+      - run: echo "event type is:" ${{ github.event.action }}
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: 'pip'
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -20,7 +26,7 @@ jobs:
       - name: Sync issues
         env:
           ACCESS_PAT: ${{ secrets.ACCESS_PAT }}
-        run: python ./scripts/runner.py
+        run: python ./scripts/sync_issues.py
       - name: Setup environment
         run: |
           git config user.name "GitHub Actions Bot"
